--- a/css/style.css
+++ b/css/style.css
@@ -68,18 +68,16 @@ h2 {
 .work {
   background-color: #e3f2fd;
   width: 100%;
-  float: left;
 }
 
-.pc_illust img {
-  width: 250px;
+.pc_illust {
   margin-top: 50px;
-  flex-grow: 4;
+  width: 250px;
 }
 
 .work_catch_copy {
   text-align: center;
-  flex-grow: 6;
+  width: 64%;
 }
 
 .work_copy {
@@ -110,42 +108,96 @@ h2 {
   gap: 100px;
   grid-template-columns: repeat(3,1fr);
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 
 /*ここまでskillsセクション*/
 
 .plan {
   background-color: #d0dfea;
+  padding-bottom: 50px;
 }
 
 .serect_plan_copy {
-  top: 50px;
-  bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   text-align: center;
   font-size: 40px;
   letter-spacing: 10px;
 }
 
-th,td {
-  border: solid 1px;
-  border-color: #ffffff;/* 枠線指定 */
-  text-align: center;
-}
-
 table {
-  border-collapse:  collapse;
-/* セルの線を重ねる */
-  align-items: center;
+  width: 100%;
+  table-layout: fixed;
 }
 
 th {
-  padding-top: 10px;
-  padding-bottom: 10px;               /* 高さ指定 */
+  text-align: center;
+  font-size: 16px;
+  line-height: 26px;
+  background-color: #6ba7eb;
+  border-left: 2px solid #fff;
+  padding: 10px;
 }
 
-#oregen {
-  width: 105mm;
-  height: 105mm;
-  background-color: aqua;
+td {
+  text-align: center;
+  font-size: 16px;
+  line-height: 26px;
+  background-color: #e0efff;
+  border-left: 2px solid #fff;
+  padding: 10px;
+}
+
+.plan_heading {
+  font-weight: bold;
+}
+
+tr:nth-of-type(odd) td {
+  background-color:  #f9f9f9;    /* 背景色指定 */
+}
+
+tr>*:first-child {
+  border-left:none ;
+}
+
+/*ここまでテーブルセクション*/
+
+.sns {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-color: #e3f2fd;  /* 背景色指定 */
+}
+
+.sns_flex {
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  width: 185px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  color: #8c8c8c;
+  overflow: hidden;
+  font-size: 40px;
+  text-align: center;
+}
+
+/*ここまでSNSセクション*/
+
+footer {
+  background-color: #cfd8dc;
+}
+
+.footer_flex {
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  justify-content: end;
+}
+
+p {
+  font-size: 10px;
+  letter-spacing: 0.5px;
 }
