--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,9 @@ a {
   text-decoration:none;
 }
 
-.header {
+img {
   width: 100%;
-  background: #fff;
-  position: sticky;
+  height: 100%;
 }
 
 .inner {
@@ -15,16 +14,24 @@ a {
   margin: 0 auto;
 }
 
-.logo {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  color: #777;
-}
-
 .d--flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/*他のセクションでも使う　*/
+
+.header {
+  background: #fff;
+  position: sticky;
+  top: 0;
+}
+
+.header_logo {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: #777;
 }
 
 li a {
@@ -35,39 +42,37 @@ li a {
 }
 /*ここまでヘッダー*/
 
-img {
+.keyvisual_img {
+  background-image: url(../img/keyvisual/keyvisual.jpg);
+  background-size: cover;
   width: 100%;
-  height: 100%;
-  position: relative;
+  height: auto;
+  display: flex;
 }
 
-.copy {
+.keyvisual_copy {
   width: 100%;
-  position: absolute;
   text-align: center;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  top: 400px;
-  bottom: 400px;
 }
 
 h1 {
   font-size: 65px;
   font-weight: 700;
   color: #6ba7eb;
-  margin-bottom: 30px;
+  padding-top: 400px;
+  padding-bottom: 30px;
 }
 
 h2 {
   font-size: 40px;
   font-weight: 700;
   color: #ffffff;
+  padding-bottom: 400px;
 }
 /*ここまでメインタイトル*/
 
 .work {
   background-color: #e3f2fd;
-  width: 100%;
 }
 
 .pc_illust {
@@ -83,8 +88,8 @@ h2 {
 .work_copy {
   font-size: 40px;
   letter-spacing: 10px;
-  margin-top: 20px;
-  margin-bottom: 35px;
+  padding-top: 20px;
+  padding-bottom: 35px;
 }
 
 .work_text {
@@ -100,7 +105,7 @@ h2 {
   font-size: 40px;
   letter-spacing: 10px;
   text-align: center;
-  margin-top: 50px;
+  padding-top: 50px;
 }
 
 .skills_icon {
