--- a/css/style.css
+++ b/css/style.css
@@ -243,3 +243,158 @@ footer {
   font-size: 10px;
   letter-spacing: 0.5px;
 }
+
+
+@media screen and (max-width: 1199px) {
+  
+  .inner {
+  width: 97%;
+}
+
+.keyvisual_copy {
+  padding-top: 250px;
+  padding-bottom: 250px;
+}
+
+.work {
+  padding-bottom: 50px;
+}
+
+.work--flex {
+  display:block;
+  justify-content: center;
+}
+
+.pc_illust_parents {
+  width: auto;
+  text-align: center;
+}
+
+.work_catch_copy {
+  width: 100%;
+}
+
+.skills {
+  padding-top: 50px;
+  padding-bottom: 70px;
+}
+
+.skills_copy {
+  font-size: 40px;
+  letter-spacing: 10px;
+  text-align: center;
+}
+
+.skills_icon_area {
+  display: block;
+  padding-top: 50px;
+}
+
+.skills_card {
+  width: 300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: repeat(1,1fr);
+}
+
+/*ここからSP版*/
+
+.skills_card:nth-child(4n+3) {
+  margin-bottom: 80px;
+}
+
+}
+
+@media screen and (max-width: 767px) {
+
+.inner {
+  width: 97%;
+}
+
+.contact .contact_inline {
+  display: none;
+}
+
+/*ここからハンバーガーメニュー*/
+
+.nav_toggle {
+  display: block;
+  position: relative;
+  width: 1.75rem;
+  height: 1.5rem;
+}
+.nav_toggle i {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  transition: transform .5s, opacity .5s;
+}
+.nav_toggle i:nth-child(1) {
+  top: 0;
+}
+.nav_toggle i:nth-child(2) {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+.nav_toggle i:nth-child(3) {
+  bottom: 0;
+}
+
+/*ここまでハンバーガーメニュー*/
+
+.keyvisual_copy {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+.keyvisual_subcopy {
+  font-size: 30px;
+}
+
+.skills_icon {
+  display: block;
+  padding-top: 50px;
+}
+
+.skills_card {
+  width: 300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: repeat(1,1fr);
+}
+
+.skills_card:nth-child(4n+3) {
+  margin-bottom: 80px;
+}
+
+th,td {
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.sns {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.sns_flex {
+  display: block;
+}
+
+.sns_icon {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+}
