--- a/css/style.css
+++ b/css/style.css
@@ -387,8 +387,7 @@ th,td {
 }
 
 .sns_icon {
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
 }
